# RGR

./: Makefile  README.md  main.cpp  shifrs.cpp  shifrs.h  utils.cpp  utils.h
ciphers/: rsa.cpp  rsa.h  vigenere.h
src/: main.cpp  utils.cpp  utils.h
v6 (stable_Linux)/: Makefile  install.sh  uninstall.sh
v6 (stable_Linux)/ciphers/: gronsfeld.cpp  gronsfeld.h  vigenere.cpp
v6 (stable_Linux)/src/: main.cpp  utils.cpp  utils.h
v6 (stable_Windows)/: CMakeLists.txt  build_and_compile.bat  install.vbs  uninstall.vbs
v6 (stable_Windows)/ciphers/: gronsfeld.cpp  gronsfeld.h  rsa.cpp  rsa.h  vigenere.cpp  vigenere.h
v6 (stable_Windows)/dll_loader/: dynamic_loader.h  dynamic_loader_win.cpp
v6 (stable_Windows)/src/: main.cpp  utils.cpp  utils.h
